--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "return-link-preview",
-  "displayName": "Return link preview",
-  "version": "0.0.1",
+  "displayName": "Return X Link Previews",
+  "version": "0.0.2",
   "description": "Bring back X/Twitter link previews",
   "author": "Steven Linn <stevenlafl>",
   "scripts": {
@@ -12,7 +12,7 @@
   "dependencies": {
     "@plasmohq/messaging": "^0.5.0",
     "@plasmohq/storage": "^1.8.0",
-    "axios": "^1.5.1",
+    "@vespaiach/axios-fetch-adapter": "^0.3.1",
     "cheerio": "1.0.0-rc.12",
     "plasmo": "0.83.0",
     "react": "18.2.0",
