Change package name to be more SEO friendly

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "return-link-preview",
-  "displayName": "Return X Link Previews",
+  "displayName": "Return X/Twitter Link Previews",
   "version": "0.0.2",
   "description": "Bring back X/Twitter link previews",
   "author": "Steven Linn <stevenlafl>",
